# gmail-optimizer

./: client_id_client_secret_2023-05-27.json  email_id.txt  pyproject.toml  quickstart.py
